# gazebo-harmonic-ros

./: .dockerignore  .gitattributes  .gitignore  AGENTS.md  Dockerfile  README.md  SECURITY.md  docker-compose.yml
workspace/: G1_CMD_VEL.md  G1_LOW_LEVEL.md  G1_SIM_GUIDE.md  bridge.yaml
workspace/bridges/: g1_pos_bridge.yaml  g1_vel_bridge.yaml
workspace/models/g1_29dof/: model.config  model.sdf
workspace/models/g1_29dof_fixed/: model.config  model.sdf
workspace/models/g1_29dof_fixed_pos_control/: model.sdf
workspace/models/g1_29dof_low_level_control/: model.config  model.sdf
workspace/models/g1_29dof_low_level_velocity_control/: model.config  model.sdf
workspace/models/g1_demo_cmd_pos/: model.config  model.sdf
workspace/models/g1_demo_cmd_vel/: model.sdf
workspace/models/simple_box_robot/: model.config  model.sdf
workspace/results/: README.md
workspace/ros2_ws/src/g1_sim_bringup/: package.xml  setup.cfg  setup.py
workspace/ros2_ws/src/g1_sim_bringup/g1_sim_bringup/: demo_cmd_vel_movements.py  demo_cmd_vel_movements2.py  launch_description.py  sim_and_bridge.py
workspace/ros2_ws/src/g1_sim_bringup/launch/: g1_sim_and_bridge.launch.py
workspace/ros2_ws/src/g1_sim_bringup/resource/: g1_sim_bringup
workspace/worlds/: empty_world.sdf  g1_demo.world.sdf  g1_demo_cmd_pos.world.sdf  g1_demo_cmd_vel.world.sdf  g1_free_roam.world.sdf  g1_low_level.world.sdf  g1_low_level_velocity.world.sdf
