<?xml version="1.0"?>
<package format="3">
  <name>g1_sim_bringup</name>
  <version>0.1.0</version>
  <description>Bringup launch files for G1 Gazebo Harmonic simulation with ROS 2 bridge.</description>
  <maintainer email="luis@example.com">luis</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>ros_gz_bridge</exec_depend>
  <exec_depend>ros_gz_sim</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
